image added to assets

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("https://images.unsplash.com/photo-1585506354287-0a68aed5c533?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTd8fHRyYWluJTIwc3RhdGlvbnxlbnwwfHwwfHw%3D&w=1000&q=80")
+    background-image:"assets/train counter.jpg"
   } 
   
   h2 {
